big refactor, detect working

--- a/diagnostics/tropical_cyclones/notebooks/tropical_cyclones.ipynb
+++ b/diagnostics/tropical_cyclones/notebooks/tropical_cyclones.ipynb
@@ -2,7 +2,51 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'date': '2020012006',\n",
+       " 'lon': ['324.000000',\n",
+       "  '296.000000',\n",
+       "  '338.000000',\n",
+       "  '247.000000',\n",
+       "  '201.000000',\n",
+       "  '74.000000',\n",
+       "  '31.000000'],\n",
+       " 'lat': ['-70.500000',\n",
+       "  '-69.500000',\n",
+       "  '-58.500000',\n",
+       "  '-57.500000',\n",
+       "  '-38.500000',\n",
+       "  '66.500000',\n",
+       "  '78.500000']}"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tempest_fileout='/home/b/b382216/scratch/test/tmpdir_tco2559-ng5-cycle3/tempest_output_20200120T18.txt'\n",
+    "with open(tempest_fileout) as f:\n",
+    "    lines = f.readlines()\n",
+    "first = lines[0].split('\\t')\n",
+    "date = first[0] + first[1].zfill(2) + first[2].zfill(2) + first[4].rstrip().zfill(2)\n",
+    "lon_lat = [line.split('\\t')[3:] for line in lines[1:]]\n",
+    "tempest_nodes = {'date': date, \n",
+    "                        'lon': [val[0] for val in lon_lat],\n",
+    "                        'lat': [val[1] for val in lon_lat]}\n",
+    "\n",
+    "tempest_nodes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +63,7 @@
     "import copy\n",
     "import sys\n",
     "sys.path.insert(0, '../') # Hack to import from parent directory, to be removed\n",
-    "from class_methods_TCs import TCs\n",
+    "from tropical_cyclones import TCs\n",
     "from aqua.util import load_yaml\n",
     "from aqua.logger import log_configure\n",
     "mainlogger = log_configure('INFO', log_name='MAIN')"
@@ -192,15 +236,34 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-04 12:10:15 :: TCs :: WARNING  -> Initialised streaming for 10 days starting on 2020-01-20\n"
+      "2023-07-04 12:28:09 :: TCs :: WARNING  -> Initialised streaming for 10 days starting on 2020-01-20\n",
+      "2023-07-04 12:28:38 :: TCs :: WARNING  -> processing time step 20200120T00\n",
+      "2023-07-04 12:29:22 :: TCs :: WARNING  -> processing time step 20200120T06\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-07-04 12:10:48 :: TCs :: WARNING  -> processing time step 20200120T00\n",
-      "2023-07-04 12:11:32 :: TCs :: WARNING  -> processing time step 20200120T06\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 7\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[39m# retrieve the data and call detect nodes on the first chunk of data\u001b[39;00m\n\u001b[1;32m      6\u001b[0m tropical\u001b[39m.\u001b[39mdata_retrieve()\n\u001b[0;32m----> 7\u001b[0m tropical\u001b[39m.\u001b[39;49mdetect_nodes_zoomin()\n\u001b[1;32m      9\u001b[0m \u001b[39m# parameters for stitch nodes (to save tracks of selected variables in netcdf)\u001b[39;00m\n\u001b[1;32m     10\u001b[0m n_days_stitch \u001b[39m=\u001b[39m tdict[\u001b[39m'\u001b[39m\u001b[39mstitch\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m'\u001b[39m\u001b[39mn_days_freq\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m+\u001b[39m tdict[\u001b[39m'\u001b[39m\u001b[39mstitch\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m'\u001b[39m\u001b[39mn_days_ext\u001b[39m\u001b[39m'\u001b[39m]\n",
+      "File \u001b[0;32m~/AQUA/diagnostics/tropical_cyclones/notebooks/../class_methods_TCs.py:169\u001b[0m, in \u001b[0;36mTCs.detect_nodes_zoomin\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    167\u001b[0m clean_files([\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtempest_filein])\n\u001b[1;32m    168\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mread_lonlat_nodes()\n\u001b[0;32m--> 169\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mstore_detect_nodes(tstep)\n",
+      "File \u001b[0;32m~/AQUA/diagnostics/tropical_cyclones/notebooks/../class_methods_TCs.py:400\u001b[0m, in \u001b[0;36mTCs.store_detect_nodes\u001b[0;34m(self, timestep, write_fullres)\u001b[0m\n\u001b[1;32m    398\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlogger\u001b[39m.\u001b[39minfo(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mstore_fullres_field for timestep \u001b[39m\u001b[39m{\u001b[39;00mtimestep\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m)\n\u001b[1;32m    399\u001b[0m store_file \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpaths[\u001b[39m'\u001b[39m\u001b[39mfulldir\u001b[39m\u001b[39m'\u001b[39m], \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mTC_\u001b[39m\u001b[39m{\u001b[39;00mvar\u001b[39m}\u001b[39;00m\u001b[39m_\u001b[39m\u001b[39m{\u001b[39;00mtimestep\u001b[39m}\u001b[39;00m\u001b[39m.nc\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m--> 400\u001b[0m write_fullres_field(xfield, store_file)\n",
+      "File \u001b[0;32m~/AQUA/diagnostics/tropical_cyclones/notebooks/../class_methods_TCs.py:623\u001b[0m, in \u001b[0;36mwrite_fullres_field\u001b[0;34m(gfield, filestore)\u001b[0m\n\u001b[1;32m    621\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mNo tracks to write\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    622\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m--> 623\u001b[0m     gfield\u001b[39m.\u001b[39;49mwhere(gfield\u001b[39m!=\u001b[39;49m\u001b[39m0\u001b[39;49m)\u001b[39m.\u001b[39;49mto_netcdf(filestore,  encoding\u001b[39m=\u001b[39;49m{\u001b[39m'\u001b[39;49m\u001b[39mtime\u001b[39;49m\u001b[39m'\u001b[39;49m: time_encoding, gfield\u001b[39m.\u001b[39;49mname: var_encoding})\n\u001b[1;32m    624\u001b[0m     gfield\u001b[39m.\u001b[39mclose()\n",
+      "File \u001b[0;32m/work/bb1153/b382216/mambaforge/envs/TCs/lib/python3.10/site-packages/xarray/core/dataarray.py:3978\u001b[0m, in \u001b[0;36mDataArray.to_netcdf\u001b[0;34m(self, path, mode, format, group, engine, encoding, unlimited_dims, compute, invalid_netcdf)\u001b[0m\n\u001b[1;32m   3974\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m   3975\u001b[0m     \u001b[39m# No problems with the name - so we're fine!\u001b[39;00m\n\u001b[1;32m   3976\u001b[0m     dataset \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mto_dataset()\n\u001b[0;32m-> 3978\u001b[0m \u001b[39mreturn\u001b[39;00m to_netcdf(  \u001b[39m# type: ignore  # mypy cannot resolve the overloads:(\u001b[39;49;00m\n\u001b[1;32m   3979\u001b[0m     dataset,\n\u001b[1;32m   3980\u001b[0m     path,\n\u001b[1;32m   3981\u001b[0m     mode\u001b[39m=\u001b[39;49mmode,\n\u001b[1;32m   3982\u001b[0m     \u001b[39mformat\u001b[39;49m\u001b[39m=\u001b[39;49m\u001b[39mformat\u001b[39;49m,\n\u001b[1;32m   3983\u001b[0m     group\u001b[39m=\u001b[39;49mgroup,\n\u001b[1;32m   3984\u001b[0m     engine\u001b[39m=\u001b[39;49mengine,\n\u001b[1;32m   3985\u001b[0m     encoding\u001b[39m=\u001b[39;49mencoding,\n\u001b[1;32m   3986\u001b[0m     unlimited_dims\u001b[39m=\u001b[39;49munlimited_dims,\n\u001b[1;32m   3987\u001b[0m     compute\u001b[39m=\u001b[39;49mcompute,\n\u001b[1;32m   3988\u001b[0m     multifile\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m,\n\u001b[1;32m   3989\u001b[0m     invalid_netcdf\u001b[39m=\u001b[39;49minvalid_netcdf,\n\u001b[1;32m   3990\u001b[0m )\n",
+      "File \u001b[0;32m/work/bb1153/b382216/mambaforge/envs/TCs/lib/python3.10/site-packages/xarray/backends/api.py:1281\u001b[0m, in \u001b[0;36mto_netcdf\u001b[0;34m(dataset, path_or_file, mode, format, group, engine, encoding, unlimited_dims, compute, multifile, invalid_netcdf)\u001b[0m\n\u001b[1;32m   1278\u001b[0m \u001b[39mif\u001b[39;00m multifile:\n\u001b[1;32m   1279\u001b[0m     \u001b[39mreturn\u001b[39;00m writer, store\n\u001b[0;32m-> 1281\u001b[0m writes \u001b[39m=\u001b[39m writer\u001b[39m.\u001b[39;49msync(compute\u001b[39m=\u001b[39;49mcompute)\n\u001b[1;32m   1283\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(target, BytesIO):\n\u001b[1;32m   1284\u001b[0m     store\u001b[39m.\u001b[39msync()\n",
+      "File \u001b[0;32m/work/bb1153/b382216/mambaforge/envs/TCs/lib/python3.10/site-packages/xarray/backends/common.py:178\u001b[0m, in \u001b[0;36mArrayWriter.sync\u001b[0;34m(self, compute, chunkmanager_store_kwargs)\u001b[0m\n\u001b[1;32m    175\u001b[0m \u001b[39mif\u001b[39;00m chunkmanager_store_kwargs \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    176\u001b[0m     chunkmanager_store_kwargs \u001b[39m=\u001b[39m {}\n\u001b[0;32m--> 178\u001b[0m delayed_store \u001b[39m=\u001b[39m chunkmanager\u001b[39m.\u001b[39;49mstore(\n\u001b[1;32m    179\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49msources,\n\u001b[1;32m    180\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mtargets,\n\u001b[1;32m    181\u001b[0m     lock\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mlock,\n\u001b[1;32m    182\u001b[0m     compute\u001b[39m=\u001b[39;49mcompute,\n\u001b[1;32m    183\u001b[0m     flush\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m,\n\u001b[1;32m    184\u001b[0m     regions\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mregions,\n\u001b[1;32m    185\u001b[0m     \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mchunkmanager_store_kwargs,\n\u001b[1;32m    186\u001b[0m )\n\u001b[1;32m    187\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39msources \u001b[39m=\u001b[39m []\n\u001b[1;32m    188\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtargets \u001b[39m=\u001b[39m []\n",
+      "File \u001b[0;32m/work/bb1153/b382216/mambaforge/envs/TCs/lib/python3.10/site-packages/xarray/core/daskmanager.py:211\u001b[0m, in \u001b[0;36mDaskManager.store\u001b[0;34m(self, sources, targets, **kwargs)\u001b[0m\n\u001b[1;32m    203\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mstore\u001b[39m(\n\u001b[1;32m    204\u001b[0m     \u001b[39mself\u001b[39m,\n\u001b[1;32m    205\u001b[0m     sources: DaskArray \u001b[39m|\u001b[39m Sequence[DaskArray],\n\u001b[1;32m    206\u001b[0m     targets: Any,\n\u001b[1;32m    207\u001b[0m     \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs,\n\u001b[1;32m    208\u001b[0m ):\n\u001b[1;32m    209\u001b[0m     \u001b[39mfrom\u001b[39;00m \u001b[39mdask\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39marray\u001b[39;00m \u001b[39mimport\u001b[39;00m store\n\u001b[0;32m--> 211\u001b[0m     \u001b[39mreturn\u001b[39;00m store(\n\u001b[1;32m    212\u001b[0m         sources\u001b[39m=\u001b[39;49msources,\n\u001b[1;32m    213\u001b[0m         targets\u001b[39m=\u001b[39;49mtargets,\n\u001b[1;32m    214\u001b[0m         \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs,\n\u001b[1;32m    215\u001b[0m     )\n",
+      "File \u001b[0;32m/work/bb1153/b382216/mambaforge/envs/TCs/lib/python3.10/site-packages/dask/array/core.py:1235\u001b[0m, in \u001b[0;36mstore\u001b[0;34m(***failed resolving arguments***)\u001b[0m\n\u001b[1;32m   1233\u001b[0m \u001b[39melif\u001b[39;00m compute:\n\u001b[1;32m   1234\u001b[0m     store_dsk \u001b[39m=\u001b[39m HighLevelGraph(layers, dependencies)\n\u001b[0;32m-> 1235\u001b[0m     compute_as_if_collection(Array, store_dsk, map_keys, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m   1236\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m   1238\u001b[0m \u001b[39melse\u001b[39;00m:\n",
+      "File \u001b[0;32m/work/bb1153/b382216/mambaforge/envs/TCs/lib/python3.10/site-packages/dask/base.py:408\u001b[0m, in \u001b[0;36mcompute_as_if_collection\u001b[0;34m(cls, dsk, keys, scheduler, get, **kwargs)\u001b[0m\n\u001b[1;32m    406\u001b[0m schedule \u001b[39m=\u001b[39m get_scheduler(scheduler\u001b[39m=\u001b[39mscheduler, \u001b[39mcls\u001b[39m\u001b[39m=\u001b[39m\u001b[39mcls\u001b[39m, get\u001b[39m=\u001b[39mget)\n\u001b[1;32m    407\u001b[0m dsk2 \u001b[39m=\u001b[39m optimization_function(\u001b[39mcls\u001b[39m)(dsk, keys, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m--> 408\u001b[0m \u001b[39mreturn\u001b[39;00m schedule(dsk2, keys, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "File \u001b[0;32m/work/bb1153/b382216/mambaforge/envs/TCs/lib/python3.10/site-packages/dask/threaded.py:89\u001b[0m, in \u001b[0;36mget\u001b[0;34m(dsk, keys, cache, num_workers, pool, **kwargs)\u001b[0m\n\u001b[1;32m     86\u001b[0m     \u001b[39melif\u001b[39;00m \u001b[39misinstance\u001b[39m(pool, multiprocessing\u001b[39m.\u001b[39mpool\u001b[39m.\u001b[39mPool):\n\u001b[1;32m     87\u001b[0m         pool \u001b[39m=\u001b[39m MultiprocessingPoolExecutor(pool)\n\u001b[0;32m---> 89\u001b[0m results \u001b[39m=\u001b[39m get_async(\n\u001b[1;32m     90\u001b[0m     pool\u001b[39m.\u001b[39;49msubmit,\n\u001b[1;32m     91\u001b[0m     pool\u001b[39m.\u001b[39;49m_max_workers,\n\u001b[1;32m     92\u001b[0m     dsk,\n\u001b[1;32m     93\u001b[0m     keys,\n\u001b[1;32m     94\u001b[0m     cache\u001b[39m=\u001b[39;49mcache,\n\u001b[1;32m     95\u001b[0m     get_id\u001b[39m=\u001b[39;49m_thread_get_id,\n\u001b[1;32m     96\u001b[0m     pack_exception\u001b[39m=\u001b[39;49mpack_exception,\n\u001b[1;32m     97\u001b[0m     \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs,\n\u001b[1;32m     98\u001b[0m )\n\u001b[1;32m    100\u001b[0m \u001b[39m# Cleanup pools associated to dead threads\u001b[39;00m\n\u001b[1;32m    101\u001b[0m \u001b[39mwith\u001b[39;00m pools_lock:\n",
+      "File \u001b[0;32m/work/bb1153/b382216/mambaforge/envs/TCs/lib/python3.10/site-packages/dask/local.py:500\u001b[0m, in \u001b[0;36mget_async\u001b[0;34m(submit, num_workers, dsk, result, cache, get_id, rerun_exceptions_locally, pack_exception, raise_exception, callbacks, dumps, loads, chunksize, **kwargs)\u001b[0m\n\u001b[1;32m    498\u001b[0m \u001b[39mwhile\u001b[39;00m state[\u001b[39m\"\u001b[39m\u001b[39mwaiting\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39mor\u001b[39;00m state[\u001b[39m\"\u001b[39m\u001b[39mready\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39mor\u001b[39;00m state[\u001b[39m\"\u001b[39m\u001b[39mrunning\u001b[39m\u001b[39m\"\u001b[39m]:\n\u001b[1;32m    499\u001b[0m     fire_tasks(chunksize)\n\u001b[0;32m--> 500\u001b[0m     \u001b[39mfor\u001b[39;00m key, res_info, failed \u001b[39min\u001b[39;00m queue_get(queue)\u001b[39m.\u001b[39mresult():\n\u001b[1;32m    501\u001b[0m         \u001b[39mif\u001b[39;00m failed:\n\u001b[1;32m    502\u001b[0m             exc, tb \u001b[39m=\u001b[39m loads(res_info)\n",
+      "File \u001b[0;32m/work/bb1153/b382216/mambaforge/envs/TCs/lib/python3.10/site-packages/dask/local.py:137\u001b[0m, in \u001b[0;36mqueue_get\u001b[0;34m(q)\u001b[0m\n\u001b[1;32m    136\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mqueue_get\u001b[39m(q):\n\u001b[0;32m--> 137\u001b[0m     \u001b[39mreturn\u001b[39;00m q\u001b[39m.\u001b[39;49mget()\n",
+      "File \u001b[0;32m/work/bb1153/b382216/mambaforge/envs/TCs/lib/python3.10/queue.py:171\u001b[0m, in \u001b[0;36mQueue.get\u001b[0;34m(self, block, timeout)\u001b[0m\n\u001b[1;32m    169\u001b[0m \u001b[39melif\u001b[39;00m timeout \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    170\u001b[0m     \u001b[39mwhile\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_qsize():\n\u001b[0;32m--> 171\u001b[0m         \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mnot_empty\u001b[39m.\u001b[39;49mwait()\n\u001b[1;32m    172\u001b[0m \u001b[39melif\u001b[39;00m timeout \u001b[39m<\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m    173\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39m'\u001b[39m\u001b[39mtimeout\u001b[39m\u001b[39m'\u001b[39m\u001b[39m must be a non-negative number\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "File \u001b[0;32m/work/bb1153/b382216/mambaforge/envs/TCs/lib/python3.10/threading.py:320\u001b[0m, in \u001b[0;36mCondition.wait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    318\u001b[0m \u001b[39mtry\u001b[39;00m:    \u001b[39m# restore state no matter what (e.g., KeyboardInterrupt)\u001b[39;00m\n\u001b[1;32m    319\u001b[0m     \u001b[39mif\u001b[39;00m timeout \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m--> 320\u001b[0m         waiter\u001b[39m.\u001b[39;49macquire()\n\u001b[1;32m    321\u001b[0m         gotit \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m    322\u001b[0m     \u001b[39melse\u001b[39;00m:\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
