small impro (not definitive version)

--- a/diagnostics/teleconnections/notebooks/NAO.ipynb
+++ b/diagnostics/teleconnections/notebooks/NAO.ipynb
@@ -7,12 +7,12 @@
    "source": [
     "# NAO example notebook\n",
     "\n",
-    "This notebook contains an example of access of ERA5 data with the `Teleconnection` class and evaluation of the NAO teleconnection (station based index) with `aqua` libraries and an example of the plotting routines."
+    "This notebook contains an example of access of ERA5 data with the `Teleconnection` class and evaluation of the NAO teleconnection (station based index) with `aqua` libraries and an example of the plotting routines for one experiment only"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
