Move to new structure of the class sea Ice

--- a/diagnostics/seaice/notebooks/seaice.ipynb
+++ b/diagnostics/seaice/notebooks/seaice.ipynb
@@ -34,8 +34,8 @@
     "\n",
     "#            model      exp                          source\n",
     "mySetups = [\n",
-    "            [\"IFS\",     \"tco1279-orca025-cycle3\",   \"2D_monthly_native\"      ],\n",
-    "            [\"ICON\",    \"ngc2009\",                  \"lra-r100-monthly\"       ],\n",
+    "            [\"IFS\",     \"tco1279-orca025-cycle3\",    \"2D_monthly_native\"     ],\n",
+    "            [\"ICON\",    \"ngc2009\",                   \"lra-r100-monthly\"      ],\n",
     "            [\"IFS\",     \"tco2559-ng5-cycle3\",        \"2D_monthly_0.25deg\"    ],\n",
     "            [\"OSI-SAF\", \"osi-450\",                   \"nh-monthly\"            ],\n",
     "            [\"OSI-SAF\", \"osi-450\",                   \"sh-monthly\"            ],\n",
@@ -45,7 +45,13 @@
     "myRegions = [\"Arctic\", \"Hudson Bay\", \"Southern Ocean\", \"Ross Sea\", \"Weddell Sea\", \"Amundsen-Bellingshausen Seas\", \"Pacific Ocean\", \"Indian Ocean\"]\n",
     "\n",
     "# Run diagnostic\n",
-    "diagnostic.run(mySetups = mySetups, myRegions = myRegions)\n"
+    "diagnostic.run(mySetups = mySetups, myRegions = myRegions)\n",
+    "\n",
+    "# Run plot again only\n",
+    "diagnostic.plotExtent()\n",
+    "\n",
+    "# Save NetCDF only\n",
+    "diagnostic.createNetCDF()\n"
    ]
   }
  ],
