Add figures and output

--- a/diagnostics/seaice/notebooks/seaice.ipynb
+++ b/diagnostics/seaice/notebooks/seaice.ipynb
@@ -27,7 +27,7 @@
    "source": [
     "import sys\n",
     "sys.path.append(\"../\")\n",
-    "from    seaice_class import SeaIceExtent\n",
+    "from seaice_class import SeaIceExtent\n",
     "diagnostic = SeaIceExtent()\n",
     "\n",
     "# Setups to be included in the comparison\n",
@@ -45,7 +45,15 @@
     "myRegions = [\"Arctic\", \"Hudson Bay\", \"Southern Ocean\", \"Ross Sea\", \"Weddell Sea\", \"Amundsen-Bellingshausen Seas\", \"Pacific Ocean\", \"Indian Ocean\"]\n",
     "\n",
     "# Run diagnostic\n",
-    "diagnostic.run(mySetups = mySetups, myRegions = myRegions)\n",
+    "diagnostic.run(mySetups = mySetups, myRegions = myRegions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# Run plot again only\n",
     "diagnostic.plotExtent()\n",
