The pull paths to the necdf and pdf files are modified

--- a/diagnostics/tropical_rainfall/notebooks/ICON_histogram_plotting.ipynb
+++ b/diagnostics/tropical_rainfall/notebooks/ICON_histogram_plotting.ipynb
@@ -1196,7 +1196,7 @@
     "\n",
     "* `add/fig` (tuple, None):      Tuple of (fig, ax) to add the plot to an existing figure. / The figure object to plot on.\n",
     "\n",
-    "* `path_to_figure` (str, None): The path to save the figure. If provided, saves the figure at the specified path."
+    "* `path_to_pdf` (str, None): The path to save the figure. If provided, saves the figure at the specified path."
    ]
   },
   {
@@ -1436,7 +1436,7 @@
    ],
    "source": [
     "diag.histogram_plot(hist_icon_trop_logspaced, smooth = False, color_map = 'BrBG', figsize=0.7, \n",
-    "               xlogscale = True, ylogscale=True,  plot_title = \"ICON, trop precipitation rate\", path_to_figure='./any_path_any_name.png')"
+    "               xlogscale = True, ylogscale=True,  plot_title = \"ICON, trop precipitation rate\", path_to_pdf='./any_path_any_name.png')"
    ]
   },
   {
