The tropical-rainfall class was renamed

--- a/diagnostics/tropical_rainfall/notebooks/diagnostic_vs_streaming.ipynb
+++ b/diagnostics/tropical_rainfall/notebooks/diagnostic_vs_streaming.ipynb
@@ -54,8 +54,8 @@
    "source": [
     "from aqua import Reader\n",
     "import sys\n",
-    "sys.path.insert(0, '../')\n",
-    "from tropical_rainfall_class import TR_PR_Diagnostic as TR_PR_Diag"
+    "sys.path.insert(0, '../../')\n",
+    "from tropical_rainfall import Tropical_Rainfal"
    ]
   },
   {
@@ -72,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diag = TR_PR_Diag(num_of_bins = 20, first_edge = 0, width_of_bin = 1*10**(-6)/15)"
+    "diag = Tropical_Rainfal(num_of_bins = 20, first_edge = 0, width_of_bin = 1*10**(-6)/15)"
    ]
   },
   {
