--- a/diagnostics/tropical_rainfall/notebooks/histogram_calculations.ipynb
+++ b/diagnostics/tropical_rainfall/notebooks/histogram_calculations.ipynb
@@ -86,8 +86,8 @@
    "source": [
     "import sys\n",
     "from aqua import Reader\n",
-    "sys.path.insert(0, '../')\n",
-    "from tropical_rainfall_class import TR_PR_Diagnostic as TR_PR_Diag"
+    "sys.path.insert(0, '../../')\n",
+    "from tropical_rainfall import Tropical_Rainfall"
    ]
   },
   {
@@ -147,7 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diag = TR_PR_Diag(num_of_bins = 20, first_edge = 0, width_of_bin = 1*10**(-6)/20)"
+    "diag = Tropical_Rainfall(num_of_bins = 20, first_edge = 0, width_of_bin = 1*10**(-6)/20)"
    ]
   },
   {
