--- a/diagnostics/tropical_rainfall/notebooks/diagnostic_example_for_2t.ipynb
+++ b/diagnostics/tropical_rainfall/notebooks/diagnostic_example_for_2t.ipynb
@@ -24,8 +24,8 @@
    "source": [
     "import sys\n",
     "from aqua import Reader\n",
-    "sys.path.insert(0, '../')\n",
-    "from tropical_rainfall_class import TR_PR_Diagnostic as TR_PR_Diag"
+    "sys.path.insert(0, '../../')\n",
+    "from tropical_rainfall import Tropical_Rainfal"
    ]
   },
   {
