The typo in the name of the class is renamed

--- a/diagnostics/tropical_rainfall/notebooks/diagnostic_example_for_2t.ipynb
+++ b/diagnostics/tropical_rainfall/notebooks/diagnostic_example_for_2t.ipynb
@@ -25,7 +25,7 @@
     "import sys\n",
     "from aqua import Reader\n",
     "sys.path.insert(0, '../../')\n",
-    "from tropical_rainfall import Tropical_Rainfal"
+    "from tropical_rainfall import Tropical_Rainfall"
    ]
   },
   {
@@ -52,7 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diag = TR_PR_Diag(num_of_bins = 20, first_edge = 220, width_of_bin = 100/20)"
+    "diag = Tropical_Rainfall(num_of_bins = 20, first_edge = 220, width_of_bin = 100/20)"
    ]
   },
   {
