--- a/diagnostics/tropical_rainfall/notebooks/histogram_comparison.ipynb
+++ b/diagnostics/tropical_rainfall/notebooks/histogram_comparison.ipynb
@@ -55,8 +55,8 @@
     "import sys\n",
     "\n",
     "from aqua import Reader\n",
-    "sys.path.insert(0, '../')\n",
-    "from tropical_rainfall_class import TR_PR_Diagnostic as TR_PR_Diag"
+    "sys.path.insert(0, '../../')\n",
+    "from tropical_rainfall import Tropical_Rainfall"
    ]
   },
   {
@@ -111,7 +111,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diag = TR_PR_Diag(trop_lat=15,  num_of_bins = 20, first_edge = 0, width_of_bin = 1*10**(-6)/15)"
+    "diag = Tropical_Rainfall(trop_lat=15,  num_of_bins = 20, first_edge = 0, width_of_bin = 1*10**(-6)/15)"
    ]
   },
   {
