One unnecessary notebook was removed

--- a/diagnostics/tropical_rainfall/notebooks/histogram_calculations.ipynb
+++ b/diagnostics/tropical_rainfall/notebooks/histogram_calculations.ipynb
@@ -668,7 +668,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diag = TR_PR_Diag(bins = bins)"
+    "diag = Tropical_Rainfall(bins = bins)"
    ]
   },
   {
@@ -1142,7 +1142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diag = TR_PR_Diag(num_of_bins = 20, first_edge = 0, width_of_bin = 1*10**(-6)/20)"
+    "diag = Tropical_Rainfall(num_of_bins = 20, first_edge = 0, width_of_bin = 1*10**(-6)/20)"
    ]
   },
   {
@@ -2781,7 +2781,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diag = TR_PR_Diag( trop_lat = 30,  num_of_bins = 20, first_edge = 0, width_of_bin = 1*10**(-6)/15, s_time = 0, f_time = 47)"
+    "diag = Tropical_Rainfall( trop_lat = 30,  num_of_bins = 20, first_edge = 0, width_of_bin = 1*10**(-6)/15, s_time = 0, f_time = 47)"
    ]
   },
   {
@@ -3318,7 +3318,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diag = TR_PR_Diag(num_of_bins = 20, first_edge = 0, width_of_bin = 1*10**(-6)/15, s_time = 0, f_time = 47)"
+    "diag = Tropical_Rainfall(num_of_bins = 20, first_edge = 0, width_of_bin = 1*10**(-6)/15, s_time = 0, f_time = 47)"
    ]
   },
   {
@@ -3799,7 +3799,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diag = TR_PR_Diag(bins = bins)"
+    "diag = Tropical_Rainfall(bins = bins)"
    ]
   },
   {
