--- a/diagnostics/ocean_circulation/notebooks/ocean_circulation.ipynb
+++ b/diagnostics/ocean_circulation/notebooks/ocean_circulation.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ocean Circulation Diagnostics"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### PATH to import function"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -17,6 +33,14 @@
     "import os\n",
     "os.chdir(\"..\")\n",
     "print(os.getcwd())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Import modules"
    ]
   },
   {
@@ -43,6 +67,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model Data import"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -57,6 +89,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Config file "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -64,6 +104,34 @@
    "source": [
     "config = load_yaml(\"config.yaml\")\n",
     "outputfig= config[\"outputfig\"]\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Functions:\n",
+    "    There are several function in ocean_circulation_func\n",
+    "\n",
+    "    Main two diagnostics functions are:\n",
+    "### 1. plot_stratification\n",
+    "plot_stratification(mod_data, region=None, time = None, latS:   float=None, latN: float=None, lonW: float=None,lonE: float=None, outputfig=\"./figs\")\n",
+    "\n",
+    "    All you need to give is model data and need to specify the region or custom (lat, lon box) and the time. And, you will get temperature, salinity and density profile including the observation data comparison. \n",
+    "\n",
+    "### 2. #plot_spatial_mld\n",
+    "plot_spatial_mld(data, region=None, time = None, latS: float=None, latN: float=None, lonW: float=None,lonE: float=None, outputfig=\"./figs\")\n",
+    "\n",
+    "    All you need to give is model data and need to specify the region or custom (lat, lon box) and the time. And, you will get the Mixed Layer Depth including the observation data comparison.\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Example"
    ]
   },
   {
@@ -143,7 +211,7 @@
     }
    ],
    "source": [
-    "fn.plot_spatial_mld(dmod,\"Labrador sea\",\"mar\", 40, 90, -90, 60)"
+    "fn.plot_spatial_mld(dmod,region = \"Labrador sea\",\"mar\", 40, 90, -90, 60)"
    ]
   },
   {
