--- a/diagnostics/teleconnections/notebooks/ENSO.ipynb
+++ b/diagnostics/teleconnections/notebooks/ENSO.ipynb
@@ -11,20 +11,20 @@
     "\n",
     "## Content\n",
     "\n",
-    "1. [The load of packages, modules, and data](#the-load-of-packages-modules-and-data)\n",
-    "2. [The Run method](#the-run-method)\n",
-    "3. [Index evaluation](#index-evaluation)\n",
-    "4. [Regression evaluation](#regression-evaluation)\n",
-    "5. [Correlation evaluation](#correlation-evaluation)\n",
-    "6. [Correlation with a different variable](#correlation-with-a-different-variable)\n",
-    "7. [Comparison with NCAR data](#comparison-with-ncar-data)"
+    "* [The load of packages, modules, and data](#load)\n",
+    "* [The Run method](#run)\n",
+    "* [Index evaluation](#index)\n",
+    "* [Regression evaluation](#regression)\n",
+    "* [Correlation evaluation](#correlation)\n",
+    "  * [Correlation with a different variable](#correlation-variable)\n",
+    "* [Comparison with NCAR data](#ncar)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The load of packages, modules, and data"
+    "## The load of packages, modules, and data <a class=\"anchor\" id=\"load\"></a>"
    ]
   },
   {
@@ -125,7 +125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The Run method"
+    "## The Run method <a class=\"anchor\" id=\"run\"></a>"
    ]
   },
   {
@@ -210,7 +210,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Index evaluation\n",
+    "## Index evaluation <a class=\"anchor\" id=\"index\"></a>\n",
     "\n",
     "We now show the individual steps of the teleconnection analysis and plot the results.\n",
     "\n",
@@ -267,7 +267,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Regression evaluation\n",
+    "## Regression evaluation <a class=\"anchor\" id=\"regression\"></a>\n",
     "\n",
     "Also in this case, a specific method of the class is available to evaluate the regression map and store it in the `self.regression` attribute of the class."
    ]
@@ -322,7 +322,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Correlation evaluation\n",
+    "## Correlation evaluation <a class=\"anchor\" id=\"correlation\"></a>\n",
     "\n",
     "Also in this case, a specific method of the class is available to evaluate the regression map and store it in the `self.correlation` attribute of the class.\n"
    ]
@@ -383,7 +383,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Correlation with a different variable\n",
+    "## Correlation with a different variable <a class=\"anchor\" id=\"correlation-variable\"></a>\n",
     "\n",
     "The correlation can be evaluated with a different variable than the one used for the index evaluation.\n",
     "This variable can be specified as argument of `correlation_evaluation` and must be present in the same dataset analyzed for the index evaluation.\n",
@@ -449,7 +449,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Comparison with NCAR data\n",
+    "## Comparison with NCAR data <a class=\"anchor\" id=\"ncar\"></a>\n",
     "\n",
     "With the NAO index computed, we can compare with observational data from NCAR, to check if the index is computed correctly.\n",
     "NCAR data are available in the `data` folder of the diagnostic."
@@ -469,6 +469,14 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
