The third round of sphinx-documentation polishing

--- a/diagnostics/tropical_rainfall/notebooks/comparison_of_lowres_models.ipynb
+++ b/diagnostics/tropical_rainfall/notebooks/comparison_of_lowres_models.ipynb
@@ -5,8 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Comparison with Observations: \n",
-    "## Mean Absolute Percent Error and Normilized Forecast Metric Calculations"
+    "# Comparison of Low-Resolution Cicle3 arxiv"
    ]
   },
   {
@@ -31,9 +30,9 @@
     "\n",
     "2. [Comparison of Histograms](#2-comparison-of-histograms)\n",
     "\n",
-    "4. [Tropical Mean Comparison](#4-mean-comparison)\n",
+    "4. [Tropical Mean Comparison](#3-mean-comparison)\n",
     "\n",
-    "5. [Bias of a different models]()\n",
+    "5. [The bias between models and observations](#4-calculation-of-a-bias-between-climatological-model-and-observations)\n",
     "\n",
     "[Go to the end of file](#the-end)"
    ]
@@ -60,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,6 +67,14 @@
     "from aqua import Reader\n",
     "sys.path.insert(0, '../../')\n",
     "from tropical_rainfall import Tropical_Rainfall"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Loading the low-resolution arxiv "
    ]
   },
   {
@@ -98,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,15 +157,19 @@
     "### Initialization of the tropical-rainfall diagnostic\n",
     "\n",
     "The class attributes are:\n",
-    "- **trop_lat=15**:      The latitude band of the tropical area \n",
-    "- **num_of_bins=20**:   The number of bins in the histogram\n",
-    "- **first_edge = 0**:   The left edge of the first bin\n",
-    "- **width_of_bin**:     The width of each bin"
+    "- The latitude band of the tropical area: **trop_lat=15**     \n",
+    "    \n",
+    "- The number of bins in the histogram: **num_of_bins=20**\n",
+    "    \n",
+    "- The left edge of the first bin: **first_edge = 0** \n",
+    "    \n",
+    "- The width of each bin: **width_of_bin**     \n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,30 +185,36 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "path_to_netcdf = \"/work/bb1153/b382267/tropical_rainfall_cicle3/NetCDF/histograms/\"\n",
-    "path_to_pdf    = \"/work/bb1153/b382267/tropical_rainfall_cicle3/NetCDF/PDF/\""
+    "##### All output of the diagnostic is in the format of NetCDF or PDF. The paths to the repositories, where the diagnostic store the output, are "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/work/bb1153/b382267/mamba_dir/mambaforge/envs/aqua/lib/python3.10/site-packages/dask/array/core.py:3471: UserWarning: Passing an object to dask.array.from_array which is already a Dask collection. This can lead to unexpected behavior.\n",
-      "  warnings.warn(\n",
-      "2023-07-09 17:56:37 :: create_folder :: WARNING  -> Folder /work/bb1153/b382267/tropical_rainfall_cicle3/NetCDF/histograms/ already exists\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "path_to_netcdf = \"/work/bb1153/b382267/tropical_rainfall_cicle3/NetCDF/histograms/\"\n",
+    "path_to_pdf    = \"/work/bb1153/b382267/tropical_rainfall_cicle3/PDF/\""
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The function `histogram` calculates and stores the histograms in a specified repository. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "hist_icon_ngc3028 = diag.histogram(icon_ngc3028, path_to_histogram=path_to_netcdf, name_of_file=\"icon_ngc3028_lra_r100_monthly\")"
    ]
@@ -264,17 +281,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Units of precipitation: mm  day**-1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "path_to_pdf = './'\n",
-    "pdf_format = False"
+    "##### The diagnostic can provide us with a graphical comparison of the obtained histograms.  \n",
+    "##### Below we compare the precipitation pdf with the units `mm/day`. Units of precipitation: mm  day**-1"
    ]
   },
   {
@@ -343,7 +351,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Along longitude"
+    "##### The diagnostic can also give us a graphical comparison of the mean value along different coordinates. \n",
+    "\n",
+    "For example, the function `mean_and_median_plot()` calculates the mean value of precipitation during \n",
+    " - December-January-February (`DJF`), \n",
+    " - March-April-May (`MAM`), \n",
+    " - June-July-August (`JJA`), \n",
+    " - September-October-November (`SON`), and \n",
+    "- for the total period of time. \n",
+    "\n",
+    "Then the function  `mean_and_median_plot(coord='lon')` calculates the mean value of precipitation along the longitude. \n",
+    "\n",
+    "In the end, the mean values of precipitation for each value of latitude in millimeters per day are:"
    ]
   },
   {
@@ -387,6 +406,16 @@
     "                                path_to_pdf=path_to_pdf, \n",
     "                                pdf_format =pdf_format,\n",
     "                                name_of_file='icon_ngc3028_ifs_tco2559_ng5_ifs_tco1279_orca025_mswep_lra_r100_monthly_comparison_along_lat')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The function `mean_and_median_plot(coord='lat')` calculates the mean precipitation value for each season (`DJF`, `MAM`, `JJA`, `SON` and for all period of time) and along the tropical area. \n",
+    "\n",
+    "The mean values of tropical precipitation for each value of longitude in millimeters per day are:"
    ]
   },
   {
@@ -440,6 +469,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tropical-rainfall diagnostic provides the graphical representation of the bias between the mean value of precipitation of the climatological model and the mean value of observations. \n",
+    "\n",
+    "The mean value the function calculates for each season (`DJF`, `MAM`, `JJA`, `SON`) and for the total period of time. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -465,7 +504,7 @@
    "source": [
     "diag.plot_bias(icon_ngc3028, dataset_2 = mswep_mon, seasons=True, new_unit='mm/day',  trop_lat=90,  vmin=-10, vmax=10,\n",
     "                    plot_title='The bias between icon, ngc3028 ans mswep, monthly, 1 degree res (100km)',\n",
-    "                    pdf_format =pdf_format, \n",
+    "                    pdf_format = pdf_format, \n",
     "                    path_to_pdf=path_to_pdf, name_of_file='icon_ngc3028_mswep_lra_r100_monthly_bias')"
    ]
   },
